// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should disabled animation 1`] = `
<div
  class="css-16bdj12-radiobutton denali-radiobutton"
  data-testid="radiobutton-wrapper"
>
  <input
    id="radiobutton-test-radiobutton-a"
    name="test-radiobutton"
    type="radio"
    value="a"
  />
  <label
    for="radiobutton-test-radiobutton-a"
  >
    Option A
  </label>
</div>
`;

exports[`RadioButton should render a disabled radio button 1`] = `
<div
  class="css-fe5os4-radiobutton denali-radiobutton"
  data-testid="radiobutton-wrapper"
>
  <input
    checked=""
    disabled=""
    id="radiobutton-test-radiobutton-a"
    name="test-radiobutton"
    type="radio"
    value="a"
  />
  <label
    for="radiobutton-test-radiobutton-a"
  >
    Option A
  </label>
</div>
`;

exports[`RadioButton should render selected state 1`] = `
<div
  class="css-fe5os4-radiobutton denali-radiobutton"
  data-testid="radiobutton-wrapper"
>
  <input
    checked=""
    id="radiobutton-test-radiobutton-a"
    name="test-radiobutton"
    type="radio"
    value="a"
  />
  <label
    for="radiobutton-test-radiobutton-a"
  >
    Option A
  </label>
</div>
`;

exports[`RadioButton should render unselected state 1`] = `
<div
  class="css-fe5os4-radiobutton denali-radiobutton"
  data-testid="radiobutton-wrapper"
>
  <input
    id="radiobutton-test-radiobutton-a"
    name="test-radiobutton"
    type="radio"
    value="a"
  />
  <label
    for="radiobutton-test-radiobutton-a"
  >
    Option A
  </label>
</div>
`;
